--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ h4, h5, h6 {
     color: #FFFFFF;
     background-color: #0A152F;
     border: none;
-    border-radius: 15px;   
+    border-radius: 15px;  
     padding: 10px 25px; 
     text-decoration: none;
 }
@@ -190,12 +190,20 @@ nav {
 }
 
 .col:nth-child(4){
-    background: #efbc82;
+    background: #f7c081;
 }
 
 .col:nth-child(5){
-    background:#2a406e;
+    background:#010612;
 }
+
+.col:nth-child(5) h2{
+    color: #FFFFFF;
+}
+.col:nth-child(5) .caption{
+    color: #FFFFFF;
+}
+
 .col h2{
     text-align: center;
 }
@@ -210,7 +218,7 @@ nav {
 .caption{
     font-weight: 400;
     position: relative;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 16px;
     color: #0A152F;
     z-index: 90;
@@ -330,18 +338,37 @@ extra vid on overlaying color and text: https://www.youtube.com/watch?v=exb2ab72
         gap: 5px;
     }
     .container{
-        height: 2o0px;
+        height: 300px;
         width:97%;
         margin: 30px auto;
         display:flex;
     }
-    .col{
-        height: 20em;
-        flex:1;
+
+    .caption{
+        display:none;
     }
 
+    .col{
+        height: 23em;
+        flex:1;
+        transition: 0.6s;/*makes grow hover happen slower*/
+    }
+
+    .col:hover {
+        flex-grow: 2; /*when you hover over the column, it grows*/
+    }
+
+    .col:hover .caption {
+        display: block;
+        width: 15em;
+        margin-left: .5em;
+    }
+
+    .col:hover h2 {
+        text-align: left;
+    }
     .indeximg {
-        width: 17em;
+        width: 27em;
     }
     /*|Secondary|*/
     .gsetup {
