--- a/map/map.css
+++ b/map/map.css
@@ -22,6 +22,8 @@ body {
     height: 400px;
     vertical-align: top;
     overflow: hidden;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
   .svg-content {
@@ -41,14 +43,22 @@ body {
   }
 
   .tick text {
-    font-size: 0.8 em;
+    font-size: 1.15em;
     fill: #0A152F;
     font-family: 'Ubuntu';
+  }
+
+  .tick {
+    cursor: pointer; /*indicates that the legend is clickable*/
   }
   
   .tick circle {
     stroke: #0A152F;
     stroke-opacity: 0.5;
+  }
+
+  .mappagegrid {
+    display: float;
   }
 
   @media only screen and (max-width:749px){
@@ -57,8 +67,8 @@ body {
       height: 300px;
       vertical-align: top;
       overflow: hidden;
-  }
-
+    margin-left: 20px;
+}
   .country:hover, .country:active {
     fill: #F36D35;
 }
